@@ -1,5 +1,6 @@
 srcon (1.0.5)
   * Everything is rewritten and now uses polling
+  * Removed signal handlers
 
 srcon (1.0.4)
   * Added command line parameters
